# pkg/db/models.go
@@ -1,25 +1,21 @@
 package db
 
-import (
-	"gorm.io/gorm"
-)
-
+// Dataset refers to a VectorDB data space.
+// @Description Dataset refers to a VectorDB data space.
 type Dataset struct {
-	gorm.Model
-	Name  string `gorm:"primaryKey"`
-	Files []File `gorm:"foreignKey:Dataset;references:Name;constraint:OnDelete:CASCADE;"`
+	ID             string `gorm:"primaryKey" json:"id"`
+	EmbedDimension int    `json:"embed_dim,omitempty"`
+	Files          []File `gorm:"foreignKey:Dataset;references:ID;constraint:OnDelete:CASCADE;"`
 }
 
 type File struct {
-	gorm.Model
-	FileID    string     `gorm:"primaryKey"`
-	Dataset   string     `gorm:"primaryKey"` // Foreign key to Dataset
-	Documents []Document `gorm:"gorm:foreignKey:Dataset,FileID;constraint:OnDelete:CASCADE;"`
+	ID        string     `gorm:"primaryKey" json:"id"`
+	Dataset   string     `gorm:"primaryKey" json:"dataset"` // Foreign key to Dataset
+	Documents []Document `gorm:"foreignKey:Dataset,ID;references:Dataset,ID;constraint:OnDelete:CASCADE;"`
 }
 
 type Document struct {
-	gorm.Model
-	DocumentID string `gorm:"primaryKey"`
-	Dataset    string `gorm:"primaryKey"` // Foreign key to Dataset, part of composite primary key with FileID
-	FileID     string `gorm:"primaryKey"` // Foreign key to File, part of composite primary key with Dataset
+	ID      string `gorm:"primaryKey" json:"id"`
+	Dataset string `gorm:"primaryKey" json:"dataset"` // Foreign key to Dataset, part of composite primary key with FileID
+	FileID  string `gorm:"primaryKey" json:"file_id"` // Foreign key to File, part of composite primary key with Dataset
 }
