# pkg/server/server.go
@@ -37,6 +37,9 @@ func (s *Server) Start(ctx context.Context, cfg Config) error {
 	router.GET("/swagger/*any", swaggerHandler) // http://localhost:8080/swagger/index.html
 
 	// @title Knowledge API
+	// @version 1
+	// @description This is the Knowledge API server for GPTStudio.
+	// @contact.name Acorn Labs Inc.
 	v1 := router.Group(cfg.APIBase)
 	{
 		// Swagger >>>
@@ -48,15 +51,15 @@ func (s *Server) Start(ctx context.Context, cfg Config) error {
 
 		v1Datasets := v1.Group("/datasets")
 		{
-			v1Datasets.GET("/", ListDatasets)
-			v1Datasets.GET("/:id", GetDataset)
-			v1Datasets.POST("/create", CreateDataset)
-			v1Datasets.DELETE("/:id", DeleteDataset)
-			v1Datasets.POST("/:id/ingest", IngestIntoDataset)
-			v1Datasets.POST("/:id/query", QueryDataset)
-			v1Datasets.POST("/:id/retrieve", RetrieveFromDataset)
-			v1Datasets.DELETE("/:id/documents/:doc_id", RemoveDocumentFromDataset)
-			v1Datasets.DELETE("/:id/files/:file_id", RemoveFileFromDataset)
+			v1Datasets.GET("/", s.ListDatasets)
+			v1Datasets.GET("/:id", s.GetDataset)
+			v1Datasets.POST("/create", s.CreateDataset)
+			v1Datasets.DELETE("/:id", s.DeleteDataset)
+			v1Datasets.POST("/:id/ingest", s.IngestIntoDataset)
+			v1Datasets.POST("/:id/query", s.QueryDataset)
+			v1Datasets.POST("/:id/retrieve", s.RetrieveFromDataset)
+			v1Datasets.DELETE("/:id/documents/:doc_id", s.RemoveDocumentFromDataset)
+			v1Datasets.DELETE("/:id/files/:file_id", s.RemoveFileFromDataset)
 		}
 	}
 
